<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="5dp"
        android:fitsSystemWindows="true"
        android:clipToPadding="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/m_tb"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:expandedTitleTextAppearance="@style/t_s"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="pin"
            app:expandedTitleMarginEnd="120dp"
            app:expandedTitleMarginStart="35dp"
            app:expandedTitleMarginBottom="50dp"
            android:layout_marginTop="-15dp"
            app:layout_scrollFlags="exitUntilCollapsed|snapMargins"
            app:title="@string/app_name">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:id="@+id/toolbar"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:padding= "12dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding= "12dp">
        <EditText
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/encode_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:text="@string/encode"
            android:layout_marginLeft="12dp"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding= "12dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:inputType="none" />
        <TextView
            android:id="@+id/translate"
            android:layout_width="wrap_content"
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:inputType="none" />
        <TextView
            android:id="@+id/pcode"
            android:layout_width="wrap_content"
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:inputType="none" />
    </LinearLayout>
</LinearLayout>